ajuste do endpoint
